--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,7 +4,14 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on:
+      strategy:
+        matrix:
+          os: [ubuntu-latest,macos-14, windows-latest]
+          py-version:
+            - "3.10"
+            - "3.11"
+            - "3.12"
     steps:
     - name: Set up Python
       uses: actions/setup-python@v5
