--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on:
       strategy:
         matrix:
-          os: [ubuntu-latest,macos-14, windows-latest]
+          os:
+            - ubuntu-latest
+            - macos-14
+            - windows-latest
           py-version:
             - "3.10"
             - "3.11"
