--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -4,8 +4,8 @@ on: [push]
 
 jobs:
   build:
-    runs-on: $ {{matrix.os}}
-      strategy:
+    runs-on: ${{ matrix.os }}
+    strategy:
       matrix:
         os:
           - ubuntu-latest
@@ -16,8 +16,13 @@ jobs:
           - "3.11"
           - "3.12"
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v5
-      with:
-        python-version: 3.10
-        
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.py-version }}
+
+      - name: Verify Python version
+        run: python --version
