--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        exclude:
+          os: macos-14
+        py-version:
+          - "3.12"
         os:
           - ubuntu-latest
           - macos-14
