--- a/.github/workflows/python-installation.yml
+++ b/.github/workflows/python-installation.yml
@@ -1,10 +1,9 @@
 name: Installing Python
-
-on: [push]
-
+'on':
+  - push
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: '${{ matrix.os }}'
     strategy:
       matrix:
         os:
@@ -15,18 +14,11 @@ jobs:
           - "3.10"
           - "3.11"
           - "3.12"
-      exclude:
-        - os: macos-14
-          py-version: "3.12"
-
+        exclude: #added
+          - os: macos-14 #added
+            py-version: 3.12 #added
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.py-version }}
-
-      - name: Verify Python version
-        run: python --version
+          python-version: '${{ matrix.py-version }}'
